--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -5,6 +5,6 @@
     [class.card-borderd]="themeService.isCardBordered()"
 >
     <p>
-        © <span>Trezo</span> is Proudly Owned by <a href="https://envytheme.com/" target="_blank">EnvyTheme</a>
+        © <a target="_blank" href="https://www.linkedin.com/in/shabab239/">Shabab Ahmed</a>
     </p>
 </footer>
