--- a/src/app/front-pages/common/fp-footer/fp-footer.component.html
+++ b/src/app/front-pages/common/fp-footer/fp-footer.component.html
@@ -122,7 +122,7 @@
     <div class="copyright-area bg-white text-center">
         <div class="container">
             <p>
-                © <span>Trezo</span> is Proudly Owned by <a href="https://envytheme.com/" target="_blank">EnvyTheme</a>
+                © Shabab Ahmed
             </p>
         </div>
     </div>
