--- a/src/app/construction/project/to-do-list/tasks.component.html
+++ b/src/app/construction/project/to-do-list/tasks.component.html
@@ -21,7 +21,7 @@
     </ol>
 </div>
 
-<!-- To Do List -->
+<!-- Task List -->
 <div
     class="apps-to-do-list-card trezo-card table-style-two mb-25 border-radius d-block bg-white border-0 shadow-none"
     [class.component-rtl-enabled]="themeService.isRTLEnabled()"
