--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
         <a routerLink="/dashboard" class="d-flex align-items-center position-relative">
             <img src="images/logo-icon.svg" alt="logo-icon">
             <span class="fw-bold text-black position-relative">
-                Trezo
+                CREMS
             </span>
         </a>
     </div>
@@ -142,7 +142,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="accordion-item border-radius border-0">
+                    <!--<div class="accordion-item border-radius border-0">
                         <button
                             type="button"
                             (click)="toggleSection(7)"
@@ -351,7 +351,7 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="accordion-item border-radius border-0">
                         <button
                             type="button"
@@ -388,7 +388,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="accordion-item border-radius border-0">
+                   <!-- <div class="accordion-item border-radius border-0">
                         <button
                             type="button"
                             (click)="toggleSection(13)"
@@ -423,7 +423,7 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="accordion-item border-radius border-0">
                         <a routerLink="/dashboard/starter" class="sidebar-menu-link d-block w-100 position-relative border-radius fw-medium transition" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                             <i class="material-symbols-outlined">
@@ -521,7 +521,7 @@
                             </div>
                         </div>
                     </div>
-                    <span class="sub-title d-block fw-medium text-uppercase">
+                    <!--<span class="sub-title d-block fw-medium text-uppercase">
                         MODULES
                     </span>
                     <div class="accordion-item border-radius border-0">
@@ -1088,8 +1088,8 @@
                                 My Profile
                             </span>
                         </a>
-                    </div>
-                    <div class="accordion-item border-radius border-0">
+                    </div>-->
+                    <!--<div class="accordion-item border-radius border-0">
                         <button
                             type="button"
                             (click)="toggleSection(21)"
@@ -1210,7 +1210,7 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="accordion-item border-radius border-0">
                         <a routerLink="/authentication/logout" class="sidebar-menu-link d-block w-100 position-relative border-radius fw-medium transition" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                             <i class="material-symbols-outlined">
