--- a/src/app/customizer-settings/customizer-settings.component.html
+++ b/src/app/customizer-settings/customizer-settings.component.html
@@ -9,7 +9,7 @@
         <div class="logo d-flex align-items-center">
             <img src="images/logo-icon.svg" alt="logo-icon">
             <h4 class="m-0 lh-1">
-                Trezo
+                CREMS
             </h4>
         </div>
         <button
